--- a/package.json
+++ b/package.json
@@ -1,6 +1,29 @@
 {
-  "name": "auth-service",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+    "name": "auth-service",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "serve": "nodemon src/index.js",
+        "sync": "browser-sync start --proxy 'localhost:3000' --files 'src/views/*.ejs'"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "browser-sync": "^2.26.14-y.1",
+        "connect-pg-simple": "^6.2.1",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "ejs": "^3.1.5",
+        "eslint": "^7.18.0",
+        "express": "^4.17.1",
+        "express-ejs-layouts": "^2.5.0",
+        "express-session": "^1.17.1",
+        "joi": "^17.3.0",
+        "jsonwebtoken": "^8.5.1",
+        "knex": "^0.21.16",
+        "lodash": "^4.17.20",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.7",
+        "pg": "^8.5.1",
+        "uuid": "^8.3.2"
+    }
 }
