--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "serve": "nodemon src/index.js",
-        "sync": "browser-sync start --proxy 'localhost:3000' --files 'src/views/*.ejs'"
+        "serve": "nodemon --inspect=0.0.0.0 src/index.js",
+        "sync": "browser-sync start --proxy 'localhost:3000' --files 'src/views/**/*.ejs'"
     },
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "browser-sync": "^2.26.14-y.1",
         "connect-pg-simple": "^6.2.1",
-        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
         "eslint": "^7.18.0",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.0",
-        "express-session": "^1.17.1",
         "joi": "^17.3.0",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.16",
@@ -24,6 +23,7 @@
         "morgan": "^1.10.0",
         "nodemon": "^2.0.7",
         "pg": "^8.5.1",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "valid-url": "^1.0.9"
     }
 }
